--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v3
         with:
+          name: production-files
           path: ./dist
 
   deploy:
@@ -43,6 +44,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
+          name: production-files
           path: ./dist
 
       - name: Deploy to GitHub Pages
@@ -50,5 +52,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
+          name: production-files
           publish_branch: gh-pages
           force_orphan: true
