--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "@headlessui/react": "^1.7.13",
     "@react-three/drei": "^9.58.0",
     "@react-three/fiber": "^8.12.0",
     "framer-motion": "^10.6.1",
+    "headlessui": "^0.0.0",
     "maath": "^0.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
