--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,8 @@ jobs:
         with:
           name: production-files
           path: ./dist
+      - name: add-domain-cname
+        run: echo \"tbritt.xyz\" > ./dist/CNAME",
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
