--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
           name: production-files
           path: ./dist
       - name: add-domain-cname
-        run: echo \"tbritt.xyz\" > ./dist/CNAME",
+        run: echo \"tbritt.xyz\" > ./dist/CNAME
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
