--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-latex-next": "^2.2.0",
+    "react-p5": "^1.3.35",
     "react-router-dom": "^6.9.0",
     "react-tile": "^1.0.1",
     "react-tilt": "^0.1.4",
