attempt resume download button

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@headlessui/react": "^1.7.13",
     "@react-three/drei": "^9.58.0",
     "@react-three/fiber": "^8.12.0",
-    "framer-motion": "^10.6.1",
+    "caniuse-lite": "^1.0.30001546",
+    "framer": "^2.4.1",
+    "framer-motion": "^10.16.4",
     "headlessui": "^0.0.0",
     "maath": "^0.5.3",
     "react": "^18.2.0",
