--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-tile": "^1.0.1",
     "react-tilt": "^0.1.4",
     "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.150.1"
+    "three": "^0.150.1",
+    "vite-plugin-compression2": "^0.10.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
