--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.13",
     "@react-three/drei": "^9.58.0",
     "@react-three/fiber": "^8.12.0",
+    "@react-three/flex": "^1.0.1",
     "caniuse-lite": "^1.0.30001546",
     "framer": "^2.4.1",
     "framer-motion": "^10.16.4",
