--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: 18.17.0
 
       - name: Install dependencies
-        run:  yarn install && npm i sharp && npm install
+        run:  yarn install && npm i sharp && npm install && yarn next telemetry disable
 
 
       - name: Build project
