--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
 		"react-type-animation": "^3.2.0",
 		"react-vertical-timeline-component": "^3.6.0",
 		"sharp": "^0.33.5",
-		"tailwind": "^4.0.0",
-		"thirdweb": "^5"
+		"tailwind": "^4.0.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
