--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,21 +15,21 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: 18.17.0
+          node-version: 20.19.2
 
       - name: Install dependencies
-        run:  yarn install && npm i sharp && npm install && yarn next telemetry disable
+        run:  pnpm i
 
       - name: Build project
-        run: yarn export
+        run: pnpm build
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v4
         with:
           name: production-files
-          path: ./dist
+          path: ./out
 
   deploy:
     name: Deploy
@@ -44,15 +44,15 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: production-files
-          path: ./dist
+          path: ./out
       - name: add-domain-cname
-        run: echo "tbritt.xyz" > ./dist/CNAME
+        run: echo "tbritt.xyz" > ./out/CNAME
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./out
           name: production-files
           publish_branch: gh-pages
           force_orphan: true
