--- a/package.json
+++ b/package.json
@@ -1,43 +1,32 @@
 {
-	"name": "portfolio",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint",
-		"export": "next build && next-image-export-optimizer"
-	},
-	"dependencies": {
-		"@react-three/drei": "^9.107.0",
-		"@react-three/fiber": "^8.16.8",
-		"@react-three/flex": "^1.0.1",
-		"emailjs-com": "^3.2.0",
-		"file-loader": "^6.2.0",
-		"next": "14.0.4",
-		"next-image-export-optimizer": "^1.14.1",
-		"p5": "^1.9.4",
-		"pino-pretty": "^11.2.1",
-		"react": "^18.3",
-		"react-dom": "^18.3",
-		"react-latex-next": "^3.0.0",
-		"react-p5": "^1.4.1",
-		"react-type-animation": "^3.2.0",
-		"react-vertical-timeline-component": "^3.6.0",
-		"sharp": "^0.33.5",
-		"tailwind": "^4.0.0"
-	},
-	"devDependencies": {
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-vertical-timeline-component": "^3.3.6",
-		"autoprefixer": "^10.0.1",
-		"eslint": "^8",
-		"eslint-config-next": "14.1.0",
-		"framer-motion": "^11.2.12",
-		"postcss": "^8",
-		"tailwindcss": "^3.3.0",
-		"typescript": "^5"
-	}
+  "name": "terminal-portfolio",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@types/p5": "^1.7.6",
+    "critters": "^0.0.25",
+    "emailjs-com": "^3.2.0",
+    "next": "14.1.0",
+    "p5": "^2.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-p5": "^1.4.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.0",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.33"
+  }
 }
