--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,8 @@ jobs:
 
       - name: Build project
         run: pnpm build
+        env:
+          NODE_ENV: production
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v4
