--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,13 @@ jobs:
           # Set your domain for proper asset paths
           NEXT_PUBLIC_BASE_URL: https://tbritt.xyz
 
+      - name: Debug output directory
+        run: |
+            echo "Listing output directory contents:"
+            ls -la ./out
+            echo "Checking for specific images:"
+            find ./out -name "*.png" -o -name "*.jpg" -o -name "*.svg" | sort
+
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v4
@@ -55,6 +62,14 @@ jobs:
         with:
           name: production-files
           path: ./out
+
+      - name: Debug downloaded artifacts
+        run: |
+            echo "Listing downloaded artifacts:"
+            ls -la ./out
+            echo "Checking for specific images:"
+            find ./out -name "*.png" -o -name "*.jpg" -o -name "*.svg" | sort
+
       - name: add-domain-cname
         run: |
           # Create CNAME file
