--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,20 @@ jobs:
             echo "Checking for specific images:"
             find ./out -name "*.png" -o -name "*.jpg" -o -name "*.svg" | sort
 
+      - name: Copy images to output directory
+        run: |
+          echo "Ensuring images directory exists in output"
+          mkdir -p ./out/images
+          
+          # Copy all image files from public to out
+          echo "Copying images from public directory to out directory"
+          cp -rv ./public/*.png ./public/*.jpg ./public/*.svg ./public/*.ico ./out/ 2>/dev/null || true
+          
+          # List the output directory after copying
+          echo "Output directory after copying images:"
+          ls -la ./out
+          echo "Image files in output:"
+          find ./out -name "*.png" -o -name "*.jpg" -o -name "*.svg" -o -name "*.ico" | sort
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v4
